# crrcsim_extensions

./: .gitignore  CMakeLists.txt  HISTORY  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  crrc_config.h.in
cmake/: config.h.in
documentation/: Makefile.am  Makefile.in  compile.txt  control.txt  index.html  instructions.txt  non_SI_units.txt  options.txt
documentation/file_format/: Makefile.am  Makefile.in  heli01.html  index.html
documentation/howto_create_models/: Makefile.am  Makefile.in  heli01.html
documentation/input_method/: Makefile.am  Makefile.in
documentation/input_method/MNAV/: Makefile.in
documentation/input_method/PARALLEL_1_to_3/: Makefile.in
documentation/input_method/RCTRAN/: Makefile.in
documentation/input_method/SERIAL2/: Makefile.in
documentation/man/: Makefile.in  crrcsim.1
documentation/models/: Makefile.in
documentation/power_propulsion/: Makefile.in  power_propulsion.html
documentation/thermals/: Makefile.in
models/: Crossfire.xml  Erwin.xml  FlexiflyXLM.xml  Makefile.am  Makefile.in  PilatusB4.xml  Skorpion.xml  allegro.xml  apogee.xml  biplane2.xml  fireworks3_d.xml  gap65.xml  heli.xml  k2.xml  mav.xml  melyan_01.xml  outrage.xml  quickie01.xml  sovereign.xml  sport.xml  superzagi.xml  supra_a.xml  zagi-xs.xml  zipper.xml
models/battery/: Makefile.in
models/engine/: Makefile.in
objects/: Makefile.am  Makefile.in
scenery/: Makefile.in  cape_cod-orig.xml  davis-orig.xml  simple.xml
sounds/: Makefile.in
sounds/f3f/: Makefile.in
sounds/f3f/default/: Makefile.in
sounds/f3f/sport/: Makefile.in
src/: ImageLoaderTGA.cpp  SimStateHandler.cpp  SimStateHandler.h  aircraft.cpp  aircraft.h  config.cpp  config.h  crrc_animation.cpp  crrc_animation.h  crrc_checkopts.cpp  crrc_fdm.cpp  crrc_fdm.h  crrc_graphics.cpp  crrc_graphics.h  crrc_keyboard.cpp  crrc_loadair.cpp  crrc_loadair.h  crrc_main.cpp  crrc_main.h  crrc_sound.cpp  crrc_sound.h  crrc_soundserver.cpp  crrc_soundserver.h  crrc_ssgutils.cpp  crrc_ssgutils.h  crrc_system.cpp  defines.h  glconsole.cpp  glconsole.h  global.cpp  global.h  gloverlay.cpp  mod_fdm_config.h  mouse_kbd.cpp  mouse_kbd.h  zoom.cpp
src/GUI/: CMakeLists.txt  crrc_audio.cpp  crrc_audio.h  crrc_calibmap.cpp  crrc_calibmap.h  crrc_ctrldev.cpp  crrc_ctrlgen.cpp  crrc_dialog.cpp  crrc_dialog.h  crrc_f3f.cpp  crrc_f3f.h  crrc_gui_main.cpp  crrc_gui_main.h  crrc_joy.cpp  crrc_launch.cpp  crrc_launch.h  crrc_location.cpp  crrc_location.h  crrc_mousebutton.cpp  crrc_msgbox.cpp  crrc_msgbox.h  crrc_planesel.cpp  crrc_planesel.h  crrc_scaleinput.cpp  crrc_scaleinput.h  crrc_slider.cpp  crrc_slider.h  crrc_video.cpp  crrc_video.h  crrc_windthermal.cpp  puaScrListBox.cpp  puaScrListBox.h  util.cpp  util.h
src/mod_chardevice/: socketchardevicebase.cpp
src/mod_cntrl/: CMakeLists.txt  controller.cpp
src/mod_fdm/: CMakeLists.txt  fdm.cpp  fdm.h  fdm_env.h  fdm_inputs.h  ls_geodesy.cpp  ls_geodesy.h  xmlmodelfile.cpp  xmlmodelfile.h
src/mod_fdm/fdm_002/: fdm_002.cpp  fdm_002.h
src/mod_fdm/fdm_heli01/: fdm_heli01.cpp  fdm_heli01.h
src/mod_fdm/fdm_larcsim/: fdm_larcsim.cpp  fdm_larcsim.h
src/mod_fdm/fdm_testmode/: fdm_testmode.cpp  fdm_testmode.h
src/mod_fdm/formats/: airtoxml.cpp
src/mod_fdm/gear01/: gear.cpp  gear.h
src/mod_fdm/power/: battery.cpp  battery.h  engine_dcm.cpp  engine_dcm.h  gearing.cpp  gearing.h  power.cpp  power.h  propeller.cpp  propeller.h  shaft.cpp  shaft.h  simplethrust.cpp  simplethrust.h  values_step.h
src/mod_inputdev/: CMakeLists.txt  inputdev.cpp  inputdev.h
src/mod_inputdev/inputdev_audio/: inputdev_audio.cpp  inputdev_audio.h
src/mod_inputdev/inputdev_parallel/: inputdev_parallel.cpp
src/mod_inputdev/inputdev_rctran2/: inputdev_rctran2.cpp
src/mod_inputdev/inputdev_serial/: inputdev_serial.cpp
src/mod_inputdev/inputdev_socket/: inputdev_socket.cpp  inputdev_socket.h  interface_socket.cpp  interface_socket.h
src/mod_inputdev/inputdev_software/: inputdev_software.cpp  inputdev_software.h
src/mod_landscape/: CMakeLists.txt  crrc_scenery.cpp  crrc_scenery.h  crrc_sky.cpp  crrc_sky.h  ssgLoadJPG.cpp  winddata3D.cpp
src/mod_main/: CMakeLists.txt  eventhandler.cpp
src/mod_math/: CMakeLists.txt  CVector.cpp  CVector.h  pt1.cpp  pt1.h  ratelim.cpp  ratelim.h  vector3.cpp  vector3.h
src/mod_misc/: SimpleXMLTransfer.cpp  filesystools.cpp  filesystools.h
src/mod_mode/: T_GameHandler.h
src/mod_mode/F3F/: handlerF3F.cpp  handlerF3F.h
src/mod_windfield/: windfield.cpp
src/mod_windfield/thermal03/: solve.cpp
textures/: Makefile.in
